<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".EditProfile">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="@dimen/profW"
        android:layout_height="@dimen/profH"
        android:layout_marginStart="128dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="72dp"
        android:contentDescription="@string/profile"
        app:layout_constraintBottom_toTopOf="@+id/textInputEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="34dp"
        android:text="@string/nme"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/textInputEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="292dp"
        android:layout_height="66dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="9dp"
        android:hint="@string/name1"
        android:text="@string/naaame"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textInputEditText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="18dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputEditText3"
        app:layout_constraintEnd_toStartOf="@+id/textInputEditText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText2"
        android:layout_width="@dimen/textW"
        android:layout_height="@dimen/textH"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/mail1"
        android:text="@string/eeemail"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textInputEditText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="75dp"
        android:text="@string/psw"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView9"
        app:layout_constraintEnd_toStartOf="@+id/textInputEditText3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText3"
        android:layout_width="260dp"
        android:layout_height="63dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="70dp"
        android:hint="@string/psw1"
        android:text="@string/pssw"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText2" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="57dp"
        android:backgroundTint="@color/btn"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="43dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="69dp"
        android:contentDescription="@string/imageeee"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="@dimen/boxW"
        android:layout_height="@dimen/boxH"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="177dp"
        android:contentDescription="@string/carddd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/credit_card" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="178dp"
        android:backgroundTint="@color/btn"
        android:text="@string/editc"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText3" />

</androidx.constraintlayout.widget.ConstraintLayout>