<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="342dp"
        android:layout_marginBottom="19dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="66dp"
        android:layout_height="28dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="208dp"
        android:layout_marginBottom="12dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="151dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/mail"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="102dp"
        android:layout_height="101dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="554dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/profile" />

    <Button
        android:id="@+id/button"
        android:layout_width="253dp"
        android:layout_height="61dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="41dp"
        android:backgroundTint="@color/btn"
        android:shadowColor="@color/btn"
        android:text="@string/cartt"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:layout_marginStart="32dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="54dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:srcCompat="@drawable/shopping_cart" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="58dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="335dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/feedback" />

    <Button
        android:id="@+id/button2"
        android:layout_width="253dp"
        android:layout_height="63dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="330dp"
        android:backgroundTint="@color/btn"
        android:text="@string/feed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/heightH"
        android:layout_marginStart="27dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="65dp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/disable" />

    <Button
        android:id="@+id/button3"
        android:layout_width="253dp"
        android:layout_height="59dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/btn"
        android:text="@string/deactivate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="235dp"
        android:layout_height="63dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/btn"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="230dp"
        android:layout_height="63dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="7dp"
        android:backgroundTint="@color/btn"
        android:text="@string/edit"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

</androidx.constraintlayout.widget.ConstraintLayout>